# phishu

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  justfile  rust-toolchain.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  publish.yml
assets/: index.html
src/: colors.rs  config.rs  constants.rs  main.rs  scheduler.rs  sqlite.rs  time.rs  utils.rs  youtube.rs
src/assets/: index.html  root.html
src/pages/: index.html  index.rs  info.html  info.rs  lastseen.html  lastseen.rs  mod.rs  root.rs  upcoming.html  upcoming.rs
src/youtube/: channels.rs  mod.rs  utils.rs  videos.rs  xml.rs
templates/: index.html  info.html  lastseen.html  root.html  upcoming.html
