[package]
authors    = ["killbasa <git@killbasa.com>"]
edition    = "2024"
license    = "MIT"
name       = "phishu"
publish    = false
repository = "https://github.com/killbasa/phishu"
version    = "0.1.0"

[profile.release]
codegen-units = 1
debug         = false
lto           = "fat"
opt-level     = 3
strip         = "symbols"

[profile.release-debug]
debug    = true
inherits = "release"

[dependencies]
ansi-to-html       = "0.2.2"
anyhow             = "1.0.98"
axum               = "0.8.4"
axum-extra         = { version = "0.10.1", features = ["typed-header"] }
chrono             = "0.4.41"
chrono-humanize    = "0.2.3"
dotenv             = "0.15.0"
once_cell          = "1.21.3"
regex              = "1.11.1"
reqwest            = { version = "0.12.15", features = ["json"] }
roxmltree          = "0.20.0"
serde              = { version = "1.0.219", features = ["derive"] }
tokio              = { version = "1.45.0", features = ["rt-multi-thread", "macros", "net"] }
tracing            = "0.1.41"
tracing-subscriber = "0.3.19"
